--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>🏎️ F1 Overt[AI]king 👑</title>
   </head>
-  <body>
+  <body class="texture">
     <span id="team-select">
       <label for="team">Choose a racing team: </label>
       <select name="team" id="team">
