--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       </select>
     </span>
 
-    <canvas id="canvas"></canvas>
+    <canvas id="track"></canvas>
     <script src="utils.js"></script>
+    <script src="network.js"></script>
     <script src="sensor.js"></script>
     <script src="road.js"></script>
     <script src="controls.js"></script>
