add network visualizer

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     </span>
 
     <canvas id="track"></canvas>
+    <canvas id="network"></canvas>
     <script src="utils.js"></script>
+    <script src="visualizer.js"></script>
     <script src="network.js"></script>
     <script src="sensor.js"></script>
     <script src="road.js"></script>
