--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       </span>
 
       <span class="vertical-buttons">
+        <h1 id="position"></h1>
         <button onclick="location.reload()" title="Restart">↻ Restart</button>
         <button onclick="save()" title="Save path">💾 Save</button>
         <button onclick="discard()" title="Remove saved path">🗑️ Delete</button>
